@@ -1,6 +1,12 @@
 2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
 	* src/MMapArea.py
+	Off-screen clipping works for other scale factors too, but only in
+	horizontal direction.
+
+2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* src/MMapArea.py
 	Fixed bug introduced with last revision.
 
 2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
